--- a/admin/super_Admin.css
+++ b/admin/super_Admin.css
@@ -19,8 +19,8 @@ body {
     /*width: 100%;
   height: 100%;
   position: absolute;
-  padding: 28px 72px 76px 70px;
-  background: rgba(0, 77, 77, .9);*/
+  padding: 28px 72px 76px 70px;*/
+    background: #f1c412;
     padding: 50px 40px;
 }
 
